# zenavif-parse

./: .gitignore  .rustfmt.toml  API-COLLAPSE-HANDOFF.md  AVIF_PARSER_V2_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SESSION_SUMMARY.md  Cargo.toml  FEEDBACK.md  FINAL_RESULTS.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.crates.md  README.md  README_FORK.md  SESSION_HANDOFF_2026-02-07.md  STREAMING_TODO.md  STREAMING_ZEROCOPY_HANDOFF.md  justfile  todo.md
.github/workflows/: ci.yml  fuzz.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
docs/public-api/: ABLATION-zenavif-parse.md  zenavif-parse.features.txt  zenavif-parse.internal.txt  zenavif-parse.txt
examples/: dump_av1.rs  dump_boxes.rs  inspect_animation.rs  inspect_grid.rs  test_streaming.rs  test_streaming.rs.future
fuzz/: Cargo.toml  isobmff.dict
fuzz/artifacts/fuzz_parse/: crash-a26efe1e30f5e02feb3640c7460c990c55d8264b
fuzz/corpus/fuzz_parse/: 0081f9bc36dba9c8.avif  008baa2a152ec5bb.avif  00a38a2a6a034e83.avif  00a5f22d5227997e.avif  00fb3c123578d3c4.avif  0108b29c146483fe.avif  014e0bade4975d4f.avif  0161d7364d192cfc.avif  01696915ce3f89f3.avif  017f17c125c95559.avif  01824d2e07f039b8.avif  01b3ad16c0ee3c37.avif  01b8d4dac983b177.avif  01e6d05beff35e50.avif  02128422da615eb2.avif  0252131d13910067.avif  026a415abac37217.avif  02748bec4f46c6bd.avif  02910cf7ee779d1d.avif  04237c16aa2bb91b.avif  0465e0d4afcf5b8b.avif  04871ea7a2004833.avif  04d93d9fc8356450.avif  04e98f51f1330e66.avif  050eb522e5d176bd.avif  0515f1a0fed70ae3.avif  05986e9e283f88f3.avif  059c784f7e15a6a1.avif  05cdc182d734eede.avif  05ec479950724540.avif  0615eece45ef3835.avif  061774a256f5e869.avif  06288e6c4a406f5d.avif  0635014f7800bd36.avif  0640f7fc265fdc02.avif  06e44f80057e88ad.avif  06e8466444c20417.avif  06f0082fe381fd83.avif  06faab8e4bd2ad6c.avif  06fb20f4238c7fad.avif  (+60 more)
fuzz/corpus/fuzz_parse_limited/: 0022b54442f41b30.avif  00460e6c63bb31e0.avif  006c8ef43d856c14.avif  00cfe38bd69a283e.avif  017054f26df7fabd.avif  0184bed6af30ebe1.avif  0189b88f678374ca.avif  018fa2c8d283fcac.avif  01c076aa50f59363.avif  01d7c7168eef46d2.avif  01f55e988cf015e7.avif  01fd7b045ec565a0.avif  021faf9b993b5db1.avif  0237b739d1557c02.avif  023dacf38e086871.avif  02f62ec62a919ba5.avif  031d660d077b7b39.avif  03a0d9b86df2257f.avif  03da654e37d3be2f.avif  03f049059191e2eb.avif  03f90794fa5b583e.avif  040d7076c9810cbc.avif  04347d783bf10659.avif  043a2be46de00d8a.avif  04987a2e5e44f8f3.avif  0502eadd3a65be04.avif  05291d7f0fca4358.avif  052e0fedc4d67904.avif  053228fdc2ea5416.avif  054f58ff2e204ff8.avif  057a6fde71bd4120.avif  05a8293a7183c02d.avif  05ad05ba58bfe347.avif  05cdc8ae767eefda.avif  0603c9f8023ae3cf.avif  06d02fe1f11833b8.avif  06fd7f8e859f725b.avif  07a3a2a02255ad0f.avif  07cf6861bb308d3a.avif  0816c617a9a6d5e8.avif  (+58 more)
fuzz/fuzz_targets/: fuzz_parse.rs  fuzz_parse_limited.rs
fuzz/regression/: README.md
src/: boxes.rs  c_api.rs  lib.rs  obu.rs
tests/: fuzz_regression.rs  ispe-1x1.avif  no-ispe-1x1.avif  public.rs  public_api_doc.rs
