[package]
name = "zenavif-parse-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
enough = "0.4"

[dependencies.zenavif-parse]
path = ".."

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_limited"
path = "fuzz_targets/fuzz_parse_limited.rs"
test = false
doc = false
bench = false
