[package]
name = "zenavif-parse-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
enough = "0.4"

[dependencies.zenavif-parse]
path = ".."

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_limited"
path = "fuzz_targets/fuzz_parse_limited.rs"
test = false
doc = false
bench = false

# TEMP mirror of the workspace-root [patch.crates-io]: the fuzz crate is its own
# workspace, so it does NOT inherit the parent patch. Drop both together when
# zencodec 0.1.26 (PR #103 taxonomy) is published.
[patch.crates-io]
zencodec = { git = "https://github.com/imazen/zencodec", branch = "cancellation-classification-99" }
